# myMasterThesis

./: README.md
Grasping_software/: CMakeLists.txt  grasping_software.cpp
Grasping_software/flexsight_core/: CMakeLists.txt  README.md
Grasping_software/flexsight_core/apps/: apps_const.h  camera_utils.cpp  camera_utils.h  demo.cpp  find_extrinsics.cpp  test_acq.cpp  test_acq_hdr.cpp  test_acq_sync.cpp  test_acq_thread.cpp  test_camera_calib.cpp  test_hardware_trigger.cpp  test_object_detection.cpp  test_online_object_detection.cpp  test_software_trigger.cpp
Grasping_software/flexsight_core/apps/RPL_backup/: HANNOVER_DEMO.XPL
Grasping_software/flexsight_core/include/: camera_calibration.h  camera_driver.h  file_tools.h
Grasping_software/flexsight_core/src/: camera_calibration.cpp  camera_driver.cpp  file_tools.cpp
Grasping_software/include/: Kinect2Interface.h  datasetInterface.h  imageProcessing.h  mySensorLocalizer.h  serial_communication.h  utils.h  yoloDetector.h
Grasping_software/modules/: FindFreenect2.cmake
Grasping_software/sensorLocalizer/: CMakeLists.txt  Kinect2Interface_backup.h  sensor_localizer.cpp  test.cpp
Grasping_software/sensorLocalizer/config/: kinect2_camera_calib.yml
Grasping_software/sensorLocalizer/include/: sensor_localizer.h
Grasping_software/src/: datasetInterface.cpp  imageProcessing.cpp  mySensorLocalizer.cpp  serial_communication.cpp  utils.cpp  yoloDetector.cpp
latek/: README.md  mystyle.cls  references.bib  thesis.aux  thesis.bbl  thesis.bbl.backup  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.tex.backup  thesis.toc
latek/chapters/: 0_abstract.tex  0_abstract.tex.backup  0_introduction.tex  0_introduction.tex.backup  1_robot_grasping_with_antropomorphic_robots.tex  1_robot_grasping_with_antropomorphic_robots.tex.backup  2_deep_learning_and_grasping.tex  3_the_proposed_method.tex  4_custom_built_dataset.tex  5_experiments.tex  6_conclusions.tex
latek/figures/: sapienza_logo.eps
my_grasping_CNN/: XVAC2Network.py  XVAC2Numpy.py  XVAC_cnn_train.py  grid_test.py  grids_gt_generator.py  test_my_cnn.py  visualizer_groundtruth_shift_cell.py
my_grasping_CNN/my_model/: model.json
